--- a/src/sass/rules/pages-rules/humanSpaceF.scss
+++ b/src/sass/rules/pages-rules/humanSpaceF.scss
@@ -1,7 +1,6 @@
 /*style Human Space F page*/
 @use './../forwardUse' as f;
 
-
 .page-spaceFlight-shadowNav {
   a {
     &:hover {
@@ -20,7 +19,7 @@
   background-position: center;
 
   .container-content-SpaceF {
-    margin-left: 700px;
+    padding-left: 680px;
   }
 }
 
@@ -29,7 +28,7 @@
   background-position: center;
 
   .container-content-SpaceF {
-    margin-left: 70px;
+    padding-left: 70px;
   }
 }
 
@@ -38,7 +37,7 @@
   background-position: center;
 
   .container-content-SpaceF {
-    margin-left: 700px;
+    padding-left: 670px;
   }
 }
 
@@ -47,7 +46,7 @@
   background-position: center;
 
   .container-content-SpaceF {
-    margin-left: 70px;
+    padding-left: 70px;
   }
 }
 
@@ -70,7 +69,7 @@
 
 main {
   .text-span {
-    padding: 5px;
+    padding: 2px;
     height: 95px;
     width: 100%;
     @include f.dFlex(flex, center, center);
